--- a/server/app/views/askInitialPreferences.scala.html
+++ b/server/app/views/askInitialPreferences.scala.html
@@ -12,52 +12,99 @@
                 @helper.CSRF.formField
                 <div class="col-sm-12">
                     <div class="school-times-section">
-                        <div class="row">
-                            <div class="form-group col-sm-3">
-                                <div class="bootstrap-timepicker timepicker">
-                                    <label for="schoolStartTime">School Start Time</label>
-                                    <input id="schoolStartTime" type="text" class="form-control input-small">
+
+                        <div class="row row-in-form">
+
+                            <div class="col-sm-4">
+                                <div class="row">
+                                    <div class="col-sm-2"></div>
+                                    <div class="form-group col-sm-8">
+                                        <div class="bootstrap-timepicker timepicker">
+                                            <label for="schoolStartTime">School Start Time</label>
+                                            <input id="schoolStartTime" type="text" class="form-control input-small">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2"></div>
                                 </div>
                             </div>
-                            <div class="col-sm-1"></div>
-                            <div class="form-group col-sm-3">
-                                <div class="bootstrap-timepicker timepicker">
-                                    <label for="morningBreakStartTime">Morning Break Start Time</label>
-                                    <input id="morningBreakStartTime" type="text" class="form-control input-small">
+
+                            <div class="col-sm-4">
+                                <div class="row">
+                                    <div class="col-sm-2"></div>
+                                    <div class="form-group col-sm-8">
+                                        <div class="bootstrap-timepicker timepicker">
+                                            <label for="morningBreakStartTime">Morning Break Start Time</label>
+                                            <input id="morningBreakStartTime" type="text" class="form-control input-small">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2"></div>
                                 </div>
                             </div>
-                            <div class="col-sm-1"></div>
-                            <div class="form-group col-sm-3">
-                                <div class="bootstrap-timepicker timepicker">
-                                    <label for="morningBreakEndTime">Morning Break End Time</label>
-                                    <input id="morningBreakEndTime" type="text" class="form-control input-small">
+
+                            <div class="col-sm-4">
+                                <div class="row">
+                                    <div class="col-sm-2"></div>
+                                    <div class="form-group col-sm-8">
+                                        <div class="bootstrap-timepicker timepicker">
+                                            <label for="morningBreakEndTime">Morning Break End Time</label>
+                                            <input id="morningBreakEndTime" type="text" class="form-control input-small">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2"></div>
                                 </div>
                             </div>
+
                         </div>
-                        <br>
-                        <div class="row">
-                            <div class="form-group col-sm-3">
-                                <div class="bootstrap-timepicker timepicker">
-                                    <label for="lunchStartTime">Lunch Start Time</label>
-                                    <input id="lunchStartTime" type="text" class="form-control input-small">
+
+                        <div class="row row-in-form">
+
+                            <div class="col-sm-4">
+                                <div class="row">
+                                    <div class="col-sm-2"></div>
+                                    <div class="form-group col-sm-8">
+                                        <div class="bootstrap-timepicker timepicker">
+                                            <label for="lunchStartTime">Lunch Start Time</label>
+                                            <input id="lunchStartTime" type="text" class="form-control input-small">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2"></div>
                                 </div>
                             </div>
-                            <div class="col-sm-1"></div>
-                            <div class="form-group col-sm-3">
-                                <div class="bootstrap-timepicker timepicker">
-                                    <label for="lunchEndTime">Lunch End Time</label>
-                                    <input id="lunchEndTime" type="text" class="form-control input-small">
+
+                            <div class="col-sm-4">
+                                <div class="row">
+                                    <div class="col-sm-2"></div>
+                                    <div class="form-group col-sm-8">
+                                        <div class="bootstrap-timepicker timepicker">
+                                            <label for="lunchEndTime">Lunch End Time</label>
+                                            <input id="lunchEndTime" type="text" class="form-control input-small">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2"></div>
                                 </div>
                             </div>
-                            <div class="col-sm-1"></div>
-                            <div class="form-group col-sm-3">
-                                <div class="bootstrap-timepicker timepicker">
-                                    <label for="schoolEndTime">School End Time</label>
-                                    <input id="schoolEndTime" type="text" class="form-control input-small">
+
+
+                            <div class="col-sm-4">
+                                <div class="row">
+                                    <div class="col-sm-2"></div>
+                                    <div class="form-group col-sm-8">
+                                        <div class="bootstrap-timepicker timepicker">
+                                            <label for="schoolEndTime">School End Time</label>
+                                            <input id="schoolEndTime" type="text" class="form-control input-small">
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-2"></div>
                                 </div>
                             </div>
+
                         </div>
+
                     </div>
+                </div>
+
+                <div class="form-submit-button">
+                    <button type="submit" class="btn btn-primary btn-lg">Submit</button>
                 </div>
             </form>
         </section>
