--- a/server/app/views/timetoteachAppMain.scala.html
+++ b/server/app/views/timetoteachAppMain.scala.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
         <link type="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.1/rangeslider.min.css"/>
         <link type="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rangeslider.js/2.3.1/rangeslider.min.css.map"/>
-        <link type="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.9.0/css/bootstrap-slider.min.css")/>
+        <link type="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.9.0/css/bootstrap-slider.min.css" )/>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("icons/ttt_owl.png")">
     </head>
@@ -30,42 +30,48 @@
 
         <nav id="appMainNavbar" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse"
-            data-target="#startupNavbar" aria-controls="navbarTogglerDemo03"
-            aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="/">
-                <img src="@routes.Assets.versioned("icons/ttt_owl.png")" alt="logo" height="26">
-                <span class="ttt-icon-writing display-5">Time to TEACH</span>
-            </a>
+            <div class="col-sm-5">
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#startupNavbar" aria-controls="navbarTogglerDemo03"
+                aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <a class="navbar-brand" href="/">
+                    <img src="@routes.Assets.versioned("icons/ttt_owl.png")" alt="logo" height="26">
+                    <span class="ttt-icon-writing display-5">Time to TEACH</span>
+                </a>
 
-            <div id="app-main-screen-title">
-                <h4 class="display-5">@title</h4>
+            </div>
+            <div class="col-sm-2">
+                <div id="app-main-screen-title">
+                    <h4 class="display-5 text-center">@title</h4>
+                </div>
             </div>
 
-            <div class="collapse navbar-collapse" id="startupNavbar">
-                <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="@routes.Application.timeToTeachApp()">Dashboard</a>
-                    </li>
+            <div class="col-sm-5">
+                <div class="collapse navbar-collapse" id="startupNavbar">
+                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="@routes.Application.timeToTeachApp()">Dashboard</a>
+                        </li>
 
-                    @if(userPictureUri.isDefined) {
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">@userFirstName.getOrElse("") @userFamilyName.getOrElse("")</a>
+                        @if(userPictureUri.isDefined) {
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">@userFirstName.getOrElse("") @userFamilyName.getOrElse("")</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><img class="center img-circle-standard" src="@userPictureUri" height="32px"></a>
+                            </li>
+                        }
+                        <li class="nav-item nav-login-button">
+                        @if(userFirstName.isDefined) {
+                            <a class="btn btn-outline-primary" href="#" onclick="signOut();">Sign out</a>
+                        } else {
+                            <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
+                        }
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#"><img class="center img-circle-standard" src="@userPictureUri" height="32px"></a>
-                        </li>
-                    }
-                    <li class="nav-item nav-login-button">
-                    @if(userFirstName.isDefined) {
-                        <a class="btn btn-outline-primary" href="#" onclick="signOut();">Sign out</a>
-                    } else {
-                        <a class="btn btn-outline-primary" href="@routes.Application.login()">Log in</a>
-                    }
-                    </li>
-                </ul>
+                    </ul>
+                </div>
             </div>
         </nav>
 
@@ -114,12 +120,10 @@
             </div>
         </footer>
         @* ========================================================================================================*@
-
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
         integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-
 
     </body>
 </html>
