--- a/server/app/views/askInitialPreferences.scala.html
+++ b/server/app/views/askInitialPreferences.scala.html
@@ -33,34 +33,34 @@
                         <div class="col-sm-6">
                             <div class="form-row">
                                 <div class="form-group bootstrap-timepicker timepicker col-sm-5">
-                                    <label for="schoolStartTime">School Start Time</label>
+                                    <label for="schoolStartTime">School Start</label>
                                     <input type="text" class="form-control input-small" id="schoolStartTime" name="schoolStartTime">
                                 </div>
                                 <div class="col-sm-2"></div>
                                 <div class="form-group bootstrap-timepicker timepicker col-sm-5">
-                                    <label for="schoolEndTime">School End Time</label>
+                                    <label for="schoolEndTime">School End</label>
                                     <input id="schoolEndTime" type="text" class="form-control input-small" name="schoolEndTime">
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="form-group bootstrap-timepicker timepicker col-sm-5">
-                                    <label for="morningBreakStartTime">Morning Break Start Time</label>
+                                    <label for="morningBreakStartTime">Morning Break Start</label>
                                     <input id="morningBreakStartTime" type="text" class="form-control input-small" name="morningBreakStartTime">
                                 </div>
                                 <div class="col-sm-2"></div>
                                 <div class="form-group bootstrap-timepicker timepicker col-sm-5">
-                                    <label for="morningBreakEndTime">Morning Break End Time</label>
+                                    <label for="morningBreakEndTime">Morning Break End</label>
                                     <input id="morningBreakEndTime" type="text" class="form-control input-small" name="morningBreakEndTime">
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="form-group bootstrap-timepicker timepicker col-sm-5">
-                                    <label for="lunchStartTime">Lunch Start Time</label>
+                                    <label for="lunchStartTime">Lunch Start</label>
                                     <input id="lunchStartTime" type="text" class="form-control input-small" name="lunchStartTime">
                                 </div>
                                 <div class="col-sm-2"></div>
                                 <div class="form-group bootstrap-timepicker timepicker col-sm-5">
-                                    <label for="lunchEndTime">Lunch End Time</label>
+                                    <label for="lunchEndTime">Lunch End</label>
                                     <input id="lunchEndTime" type="text" class="form-control input-small" name="lunchEndTime">
                                 </div>
                             </div>
@@ -96,7 +96,7 @@
                         <div class="col-sm-3"></div>
                         <div class="col-sm-6">
                             <label for="className">Class Name</label>
-                            <input type="text" id="className" name="className" class="form-control" placeholder="Enter Your Class Name, e.g. P3AB etc" required>
+                            <input type="text" id="className" name="className" class="form-control" placeholder="Enter Your Class Name, e.g. P3AB" required>
                         </div>
                         <div class="col-sm-3"></div>
                     </div>
